--- a/css/school/teacherCenter.css
+++ b/css/school/teacherCenter.css
@@ -48,20 +48,19 @@ body{
 	background: linear-gradient(to right,#FED361,#FEC332);
 }
 .myh5_card .top .title {
-	font-size:16px;
-	color: #FFF;
-	font-weight: bold;
-	margin: 30px 0 0 80px;
-	text-align: center;
+	font-size: 16px;
+    color: #333;
+    font-weight: bold;
+    margin: 30px 0 0 80px;
+    text-align: center;
+    opacity: .65;
 }
 .myh5_card .top .photo {
 	position: fixed;
 }
 .myh5_card .top .photo1 {
-	width: 50px;
-	height: 50px;
-	margin-top: 15px;
-	margin-left:15px;
+	width: 80px;
+	height: 80px;
 	position: fixed;
 }
 .head-pic-btm{
