--- a/css/school/activityDetails.css
+++ b/css/school/activityDetails.css
@@ -44,6 +44,25 @@
 	background: #FEC332;
 	color: #fff;
 }
+.ac-end-join{
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	border:2px solid rgba(168,192,255,0.5); 
+	border-radius: 50%;
+	padding-top: 12px;
+	background-color: #956cdc;
+	color: #fff;
+}
+.ac-end-quit{
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	border-radius: 50%;
+	padding-top: 14px;
+	background: #FEC332;
+	color: #fff;
+}
 .show-desc-left{
 	height: 100%;
 	margin-right: 46px;
