活动集锦、学习体会、我的作品、排行榜、个人信息设置、修改密码等

--- a/css/school/activityReply.css
+++ b/css/school/activityReply.css
@@ -24,17 +24,16 @@ body, .mui-content {
 	height: 60px;
 }
 .buttonContianer{
-	position: fixed;
+	position: absolute;
 	background: url(../../images/school/add-icon.png);
 	background-size: cover;
-	top: 260px;;
-	z-index: 999;
 }
 .div-tips{
-	position: fixed;
-	top: 280px;
+	margin-top: 16px;
+	position: absolute;
 	left: 80px;
 }
+
 
 .buttonContianer .button{
 	position: absolute;
@@ -83,7 +82,7 @@ body, .mui-content {
 }
 
 .label-desc{
-	position: fixed;
+	position: absolute;
 	margin-top: 6px;
 	margin-left: 12px;
 }
@@ -110,3 +109,4 @@ body, .mui-content {
 	border: 0;
 	padding: 6px 12px;
 }
+
