--- a/css/walking/msgInfo.css
+++ b/css/walking/msgInfo.css
@@ -2,6 +2,20 @@ body{
 	overflow: hidden;
 }
 
+@media screen and (max-width: 374px){
+	
+}
+
+@media screen and (min-width: 375px) and (max-width: 413px){
+	
+}
+
+@media screen and (min-width: 414px) {
+	
+}
+
+
+
 .mui-bar .mui-icon {
     font-size: 24px;
     position: relative;
@@ -24,7 +38,9 @@ body{
 	background-color: transparent;
 	padding-top:64px !important;
 }
-
+#item1{
+	padding-top:0 !important;
+}
 .pagebg {
 	background-color: #fff
 }
@@ -109,7 +125,7 @@ body{
 /*滚动*/
 
 .swiper-container {
-	height:150px;
+	height:350px;
 }
 
 .swiper-slide {
@@ -149,24 +165,28 @@ body{
 	padding-bottom: 24px;
 }
 ul li {
-	min-height: 123px;
+	/*min-height: 123px;*/
+	margin-top:18px;
+}
+.mui-table-view:before {
+	background-color:#fff;
 }
 
-.name1,
-.name2 {
+.name1,.name2 {
 	width: 60px;
-	height: 60px;
-	display: inline-block;
-	margin-top: 30px;
-	position: relative;
+    height: 60px;
+    display: inline-block;
+    margin-top:0;
+    position: absolute;
+    bottom: 32px;
 }
 
 .name1 {
-	margin-left: 10px;
+	left: 10px;
 }
 
 .name2 {
-	margin-right: 10px;
+	right: 10px;
 }
 
 .mui-table-view-cell {
