--- a/css/school/activityDetails.css
+++ b/css/school/activityDetails.css
@@ -4,7 +4,7 @@
 	font-size: 14px;
 	position: fixed;
 	right: 10px;
-	opacity: .5;
+	/*opacity: .5;*/
 }
 
 .show-desc{
@@ -18,11 +18,11 @@
 }
 
 .show-desc-right{
-	width: 65px;
+	width: 75px;
 	height: 100%;
 	float: right;
 	border-left:1px solid #eee;
-	padding: 20px 6px;
+	padding: 20px 10px;
 	color: #333;
 	text-align: center;
 }
@@ -45,14 +45,14 @@
 	color: #fff;
 }
 .ac-end-join{
-	width: 50px;
-	height: 50px;
-	text-align: center;
-	border:2px solid rgba(168,192,255,0.5); 
-	border-radius: 50%;
-	padding-top: 12px;
-	background-color: #956cdc;
-	color: #fff;
+	width: 55px;
+    height: 55px;
+    text-align: center;
+    border: 2px solid rgba(168,192,255,0.5);
+    border-radius: 50%;
+    padding-top: 16px;
+    background-color: #956cdc;
+    color: #fff;
 }
 .ac-end-quit{
 	width: 50px;
@@ -73,7 +73,8 @@
 }
 .show-desc-content{
 	padding: 6px 0;
-	opacity: .65;
+	/*opacity: .65;*/
+	color:#4a4a4a;
 }
 
 
@@ -81,6 +82,7 @@
 	padding: 0 0 6px 0;
 	color: #D9AA34;
 	border-bottom: 1px solid #eee;
+	font-size: 1.4em;
 }
 
 .show-desc-text{
@@ -94,6 +96,8 @@
 .content{
 	text-indent: 2em;
 	padding: 6px 0;
+	color:#4a4a4a;
+	font-size: 1em;
 }
 .desc-pic{
 	width: 30%;
