--- a/css/school/courseAll.css
+++ b/css/school/courseAll.css
@@ -1,4 +1,4 @@
-body,.mui-content{font-family: "微软雅黑"}
+body,.mui-content{font-family: "微软雅黑";background: #fff !important;}
 
 /*.desc-control .mui-control-item.mui-active:before {*/
 	/*content: " ";*/
@@ -28,8 +28,8 @@ body,.mui-content{font-family: "微软雅黑"}
     
     vertical-align: top;
 
-    border-right: 1px solid #eee;
-    border-bottom: 1px solid #eee;
+    /*border-right: 1px solid #eee;
+    border-bottom: 1px solid #eee;*/
 }
 .top-edit{
 	margin:-2px 0;color: #333;;font-size:14px;position: fixed;right:10px;opacity: .5;
@@ -55,7 +55,7 @@ body,.mui-content{font-family: "微软雅黑"}
 	box-shadow: 0 2px 6px #7e7e7e
 }
 .myh5_card:first-child{
-	margin-top: 5px;
+	margin-top:12px;
 }
 
 .myh5_card {
@@ -64,7 +64,7 @@ body,.mui-content{font-family: "微软雅黑"}
 	-webkit-box-shadow: 0 2px 6px #7e7e7e;
 	box-shadow: 0 2px 6px #7e7e7e;
 	height: 110px;
-	margin-bottom: 5px
+	margin: 6px 0;
 }
 
 .myh5_card .top {
@@ -88,7 +88,7 @@ body,.mui-content{font-family: "微软雅黑"}
 }
 
 .myh5_card .top .title {
-	font-size: 16px;
+	font-size:1.4em;
 	color: #FFF;
 	font-weight: bold;
 	margin-bottom: 2px
@@ -106,12 +106,12 @@ body,.mui-content{font-family: "微软雅黑"}
 .myh5_card .top .content1 {
 	margin-top:10px;
 	margin-right: 5%;
-	font-size:12px;
+	font-size:1em;
 	color:#fff;
 }
 
 .myh5_card .top .content2 {
-	font-size: 12px;
+	font-size:1em;
 	color: #fff;
 	font-weight: normal;
 	line-height: 14px;
