--- a/css/school/courseDetails.css
+++ b/css/school/courseDetails.css
@@ -1,14 +1,16 @@
 .content-div {
 	margin: 12px;
-	border: 1px solid #ddd;
+	/*border: 1px solid #ddd;*/
 	box-shadow: 0 5px 10px 0 rgba(0,0,0,0.11);
 	border-radius: 6px;
 }
 
 .content-title{
 	background: #FEE39C;
-	padding: 6px 12px;
+	padding:12px;
 	color: #333;
+	border-radius: 6px 6px 0 0;
+	font-size:1.2em;
 }
 
 .content-img{
