--- a/css/school/exchangeArea.css
+++ b/css/school/exchangeArea.css
@@ -23,7 +23,7 @@ body{
 	margin-right: 12px;
 }
 .works-username{
-	font-size: 12px !important;
+	font-size: 1em !important;
 	opacity: .5;
 }
 .works-time{
@@ -49,13 +49,13 @@ body{
 .works-answer{
 	margin: 0px 0;
 	border-bottom: 1px solid #eee;
-	padding-bottom: 12px;
+	/*padding-bottom: 12px;*/
 }
 
-.works-answer:last-child{
+/*.works-answer:last-child{
 	border-bottom: 0;
 	padding-bottom: 0;
-}
+}*/
 .icon-line{
 	height: 24px;
 }
@@ -81,7 +81,7 @@ body{
 	bottom: 0px;
 	width: 100%;
 	background: #fff;
-	height: 60px;
+	height: 40px;
 	line-height: 40px;
 	padding: 0 6px;
 	border-top: 1px solid #eee;
