--- a/css/school/myWorks.css
+++ b/css/school/myWorks.css
@@ -32,6 +32,7 @@ body, .mui-content {
 	margin-top: 16px;
 	position: absolute;
 	left: 80px;
+	font-size:1em;
 }
 
 .buttonContianer .button{
@@ -101,12 +102,14 @@ body, .mui-content {
 
 .label-desc-cg{
 	padding: 12px;
+	font-size:1em;
 }
 
 
 .text-content{
 	border: 0;
 	padding: 6px 12px;
+	font-size:1em;
 }
 
 
