--- a/css/school/pushCommon.css
+++ b/css/school/pushCommon.css
@@ -1,6 +1,6 @@
 html,
 body {
-	background-color: #efeff4;
+	background-color:#fff;
 }
 .mui-bar~.mui-content .mui-fullscreen {
 	/*top: 10px;*/
@@ -51,7 +51,7 @@ transition-duration: 400ms;*/
 }
 .mui-pull-bottom-tips {
 	text-align: center;
-	background-color: #efeff4;
+	background-color: #fff;
 	font-size: 15px;
 	line-height: 40px;
 	color: #777;
