--- a/css/school/selectCourse.css
+++ b/css/school/selectCourse.css
@@ -22,7 +22,7 @@
 .course-top-p{
 	text-align: center;
 	margin-top: 20px;
-	font-size: 24px !important;
+	font-size:1.6em !important;
 	color: #fff;
 }
 
@@ -37,7 +37,7 @@
 	box-shadow:0 0 19px 0 rgba(0,0,0,0.18);
 }
 .course-desc-title{
-	font-size: 18px !important;
+	font-size:1.4em !important;
 	margin-bottom: 6px;
 }
 .course-desc-left{
