--- a/css/school/studentCenter.css
+++ b/css/school/studentCenter.css
@@ -29,7 +29,7 @@ body{
 }
 .mui-bar-nav a{
 	padding: 0 !important;
-	margin: 10px !important;
+	margin:32px 10px !important;
 	border-radius: 50%;
 	color: #fff;
 }
@@ -40,7 +40,7 @@ body{
 }
 
 .myh5_card {
-	margin: 10px 0;
+	margin: 17px 0;
 }
 .psct_purple {
 	background: -webkit-linear-gradient(right,#FED361,#FEC332);
@@ -49,12 +49,12 @@ body{
 	background: linear-gradient(to right,#FED361,#FEC332);
 }
 .myh5_card .top .title {
-	font-size: 24px;
+	font-size:1.4em;
     color: #333;
-    font-weight: bold;
+    font-weight: initial;
     margin: 30px 0 0 80px;
     text-align: center;
-    opacity: .65;
+    /*opacity: .65;*/
 }
 .myh5_card .top .photo {
 	position: fixed;
@@ -82,43 +82,48 @@ body{
     opacity: .65;
 }
 .head-pic-btm{
-	height: 140px;
-	width: 140px;
+	height: 120px;
+	width: 120px;
 	position: fixed;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
-	top:20px;
+	top:32px;
 }
 .head-pic{
-	height: 100px;
-	width: 100px;
+	height: 80px;
+	width: 80px;
 	position: fixed;
 	left: 0;
 	right: 0;
-	margin: 40px auto;
+	margin: 52px auto;
 	border-radius: 50%;
 }
 .user-name{
 	text-align: center;
 	margin-top: 165px;
-	color: #fff;
+	color: #333;
 	font-size: 24px;
 }
 .class-name{
 	text-align: center;
-	color: #fff;
+	color: #333;
 	padding-top: 10px;
 	margin-bottom: 2px;
 }
 .school-name{
 	text-align: center;
-	color: #fff;
+	color: #333;
 	opacity: .65;
 }
 .dz-icon{
 	position: fixed;
 	width: 100%;
 	height: 175px;
+	left: 12px;
+}
+
+.mui-action-back {
+	color: #333 !important;
 }
 
