--- a/css/school/timeline.css
+++ b/css/school/timeline.css
@@ -13,10 +13,11 @@ h3{
 	margin: 12px 0;
 }
 .date{
-	color: #AAA;
+	color: #333;
+	opacity: .5;
 }
 p{
-	font-size: 14px;
+	font-size: 1.2em !important;
 	padding: 6px 0 0 12px;
 }
 section{
