--- a/css/school/studentCenter.css
+++ b/css/school/studentCenter.css
@@ -29,7 +29,7 @@ body{
 }
 .mui-bar-nav a{
 	padding: 0 !important;
-	margin:32px 10px !important;
+	margin:26px 0px !important;
 	border-radius: 50%;
 	color: #fff;
 }
@@ -74,12 +74,12 @@ body{
 	position: fixed;
 }
 .myh5_card2 .top .title {
-	font-size: 18px;
+	font-size:1.2em;
     color: #333;
-    font-weight: bold;
+    /*font-weight: bold;*/
     margin: 30px 0 0 80px;
     text-align: center;
-    opacity: .65;
+    /*opacity: .65;*/
 }
 .head-pic-btm{
 	height: 120px;
@@ -119,8 +119,9 @@ body{
 .dz-icon{
 	position: fixed;
 	width: 100%;
-	height: 175px;
-	left: 12px;
+	/*height: 175px;*/
+	left: 12%;
+	top:3%;
 }
 
 .mui-action-back {
