--- a/css/app.css
+++ b/css/app.css
@@ -31,11 +31,20 @@ body,.mui-content{font-family: "微软雅黑";background-color: #FFF;color:#1A1A
 }
 
 .mui-bar .mui-icon {
-	font-size: 24px;
-	position: relative;
-	z-index: 20;
-	padding-top: 30px;
-	padding-bottom: 10px;
+	font-size: 30px;
+    position: relative;
+    z-index: 20;
+    padding-top:28px;
+}
+.head-pull-left{
+	margin-top: 32px;
+    z-index:20;
+    margin-left: 10px;
+}
+.head-pull-right{
+	margin-top: 32px;
+    z-index:20;
+    margin-right: 10px;
 }
 .mui-title {
 	font-size: 17px;
