--- a/css/school/setMsgInfo.css
+++ b/css/school/setMsgInfo.css
@@ -39,7 +39,7 @@
 	width:80px;
 	border-radius:50%;
 }
-.setPwd{
+/*.setPwd{
 	margin:32px 0px;
 	color: #333;
 	font-size: 14px;
@@ -47,4 +47,4 @@
 	right: 10px;
 	opacity: 0.65;
 	display: block;
-}
+}*/
