--- a/css/school/studentCenter.css
+++ b/css/school/studentCenter.css
@@ -57,21 +57,21 @@ body{
     /*opacity: .65;*/
 }
 .myh5_card .top .photo {
-	position: fixed;
+	position: absolute;
 }
 .myh5_card .top .photo1 {
 	width: 50px;
 	height: 50px;
 	margin-top: 15px;
 	margin-left:15px;
-	position: fixed;
+	position: absolute;
 }
 
 .myh5_card2 .top .photo1 {
 	width: 80px;
 	height: 80px;
 	margin: 0;
-	position: fixed;
+	position: absolute;
 }
 .myh5_card2 .top .title {
 	font-size:1.2em;
@@ -84,7 +84,7 @@ body{
 .head-pic-btm{
 	height: 120px;
 	width: 120px;
-	position: fixed;
+	position: absolute;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
@@ -93,7 +93,7 @@ body{
 .head-pic{
 	height: 80px;
 	width: 80px;
-	position: fixed;
+	position: absolute;
 	left: 0;
 	right: 0;
 	margin: 52px auto;
@@ -117,7 +117,7 @@ body{
 	opacity: .65;
 }
 .dz-icon{
-	position: fixed;
+	position: absolute;
 	width: 100%;
 	/*height: 175px;*/
 	left: 12%;
